--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body {
   height: 100vh;
 }
 .col {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 8rem;
   width: 3rem;
   border: 1px solid black;
